# Thread-ESP32-BorderGateway

./: .gitignore  README.md
Thread_BorderGateway/: .gitignore  CMakeLists.txt  extra_spiffs.py  partitions.csv  platformio.ini  sdkconfig.defaults
Thread_BorderGateway/include/: esp_ot_config.h  hub_config.h  ot_build_fix.h  secrets.h.example
Thread_BorderGateway/rcp_build_dir/: flash_args  rcp_version
Thread_BorderGateway/src/: CMakeLists.txt  Kconfig.projbuild  ble_central.c  ble_central.h  captive_portal.h  captive_portal_html.c  coap_bridge.c  coap_bridge.h  device_registry.c  device_registry.h  dns_server.c  dns_server.h  hub_button.c  hub_button.h  hub_led.c  hub_led.h  hub_settings.c  hub_settings.h  idf_component.yml  main.c  mqtt_bridge.c  mqtt_bridge.h  otbr_net.c  otbr_net.h  pairing.c  pairing.h  rcp_auto.c  rcp_auto.h  util_slug.c  util_slug.h  web_server.c  web_server.h  wifi_net.c  wifi_net.h
Thread_BorderGateway/tools/: flash_hub_full.py  prepare_rcp_image.py
Thread_BorderGateway/tools/spiffs_image/ot_rcp_0/: rcp_image
Thread_BorderGateway/tools/spiffs_image/rcp_0/: rcp_image
Thread_Contact/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.defaults
Thread_Contact/include/: board.h
Thread_Contact/src/: CMakeLists.txt  app_button.h  app_led.h  ble_peripheral.c  coap_sensor.c  coap_sensor.h  contact_input.c  contact_input.h  main.c  mqtt_sensor.c  mqtt_sensor.h  sensor_nvs.c  sensor_nvs.h  thread_net.c  thread_net.h
Thread_RCP/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
Thread_RCP/boards/: esp32-h2-devkitm-1.json
Thread_RCP/src/: CMakeLists.txt  main.c
Thread_TempHum/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
Thread_TempHum/boards/: esp32-h2-devkitm-1.json
Thread_TempHum/include/: board.h
Thread_TempHum/src/: CMakeLists.txt  app_button.c  app_button.h  app_led.c  ble_peripheral.c  ble_peripheral.h  coap_sensor.c  coap_sensor.h  main.c  mqtt_sensor.c  mqtt_sensor.h  sensor_nvs.c  sensor_nvs.h  sht_sensor.c  sht_sensor.h  thread_net.c  thread_net.h
docs/: ARCHITECTURE.md  FLASHING.md  OTBR_IDF.md  PAIRING.md
nodered/: README.md  flows_thread_sensors.json
shared/protocol/: device_types.h  mqtt_schema.md
